--- a/pom.xml
+++ b/pom.xml
@@ -32,6 +32,13 @@
 			<version>1.13</version>
 		</dependency>
 
+		<!-- Cloudinery APA's -->
+		<dependency>
+			<groupId>com.cloudinary</groupId>
+			<artifactId>cloudinary-http44</artifactId>
+			<version>1.30.0</version>
+		</dependency>
+
 		<dependency>
 			<groupId>org.springframework.boot</groupId>
 			<artifactId>spring-boot-starter-thymeleaf</artifactId>
